--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                             <a href="https://www.linkedin.com/in/tochukwu-udochukwu/"><i class="fab fa-linkedin"></i></a>
                             <a href="https://twitter.com/christiantochu"><i class="fab fa-twitter"></i></a>
                             <a href="https://www.facebook.com/christiantoochukwu"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i
-                                    class="fab fa-youtube"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
                             <a href="https://www.instagram.com/christian_tochukwu1/"><i class="fab fa-instagram"></i></a>
                         </div>
 
@@ -154,8 +153,21 @@
                         <div class="topic">Git and GitHub</div>
                     </div>
                     <div class="box">
-                        <div class="topic">Docker & DockerHub</div>
+                        <div class="topic">Docker, DockerHub & Kubernetes</div>
                     </div>
+                    <div class="box">
+                        <div class="topic">Angular.Js</div>
+                    </div>
+                    <div class="box">
+                        <div class="topic">CI/CD</div>
+                    </div>
+                    <div class="box">
+                        <div class="topic">AWS</div>
+                    </div>
+                    <div class="box">
+                        <div class="topic">backend APIs</div>
+                    </div>
+                
                 </div>
 
 
@@ -170,7 +182,7 @@
                         <div class="topic">HTML</div>
                     </div>
                     <div class="box">
-                        <div class="topic">CSS</div>
+                        <div class="topic">CSS & SCSS</div>
                     </div>
                     <div class="box">
                         <div class="topic">Boostrap</div>
@@ -217,10 +229,19 @@
 
                 <!-- project3 -->
                 <div class="box">
-                    <div class="topic">Expense Tracker Application</div>
-                    <p>An app built with React, CSS, javaScript</p>
+                    <div class="topic">A Truck Logistic App </div>
+                    <p>Technology Used: React,React Icons,  TypeScript, NodeJS/Express</p>
                     <div class="project-buttons"> <br>
-                        <button> <a href="https://github.com/Tochukwu1159/Expenses-Tracker-project">Demo</a> </button> <button> <a
+                        <button> <a href="https://trucksnow.netlify.app">Demo</a> </button> <button> <a
+                                href="https://github.com/Tochukwu1159/Truct-logistics-app">Code</a> </button>
+                    </div>
+                </div>
+                   <!-- project3 -->
+                <div class="box">
+                    <div class="topic">A Food Alert App </div>
+                    <p>Technology Used: ReactJS, CSS, HTML, JavaScript </p>
+                    <div class="project-buttons"> <br>
+                        <button> <a href="http://decameal.netlify.app">Demo</a> </button> <button> <a
                                 href="https://github.com/Tochukwu1159/Expenses-Tracker-project">Code</a> </button>
                     </div>
                 </div>
