--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     For more details about me. Check out my resume
                     <div class="button">
                     <button> <a
-                                href="https://docs.google.com/document/d/1YQLZx1n22Mf8CwjRGHGyG6zFbdK3dznG5RHksh7NNjg/edit">View
+                                href="https://docs.google.com/document/d/1YQLZx1n22Mf8CwjRGHGyG6zFbdK3dznG5RHksh7NNjg/edit?usp=sharing">View
                                 CV</a></button>
                     </div>
                 </div>
